--- a/MiraclePack/app/src/main/res/values/themes.xml
+++ b/MiraclePack/app/src/main/res/values/themes.xml
@@ -20,4 +20,8 @@
         <item name="android:background">@android:color/white</item>
     </style>
 
+    <style name="BackButtonTheme" parent="">
+        <item name="android:homeAsUpIndicator">@drawable/baseline_arrow_back_24</item>
+    </style>
+
 </resources>
