--- a/MiraclePack/app/src/main/res/layout/fragment_bag.xml
+++ b/MiraclePack/app/src/main/res/layout/fragment_bag.xml
@@ -25,7 +25,7 @@
         android:clickable="true"
         android:contentDescription="Voeg nieuwe inhoud toe aan de tas"
         android:focusable="true"
-        android:backgroundTint="@color/black"
+        android:backgroundTint="@color/houseStyleColor"
         app:tint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
