--- a/MiraclePack/app/src/main/res/values/themes.xml
+++ b/MiraclePack/app/src/main/res/values/themes.xml
@@ -39,4 +39,14 @@
         <item name="actionMenuTextColor">@color/white</item>
     </style>
 
+    <style name="SwitchTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Active thumb color & Active track color(30% transparency) -->
+        <item name="colorControlActivated">@color/white</item>
+        <!-- Inactive thumb color -->
+        <item name="colorSwitchThumbNormal">@color/white</item>
+        <!-- Inactive track color(30% transparency) -->
+        <item name="android:colorForeground">@color/white</item>
+        ...
+    </style>
+
 </resources>
